Finally fixed and understood the image drawing system, images are blurry due to how the rendering works, will have to fix later

--- a/Src/Main/main.css
+++ b/Src/Main/main.css
@@ -15,6 +15,7 @@ body {
     top: 0;
 
     background-color: white;
+    image-rendering: optimizeQuality;
 }
 
 
